# RaAGaaS

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_tenants_collections_documents_keys_sources_jobs.py
backend/app/: __init__.py  main.py
backend/app/chunking/: base.py  fixed.py  recursive.py  semantic.py
backend/app/core/: config.py  deps.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  db.py  enums.py
backend/app/providers/: __init__.py  base.py  factory.py
backend/app/providers/embedding/: local.py  openai.py
backend/app/providers/vector/: chroma.py  pinecone.py  weaviate.py
backend/app/routers/: collections.py  db_import.py  documents.py  keys.py  query.py
backend/app/schemas/: collections.py  db_import.py  documents.py  keys.py  query.py
backend/app/services/: api_key.py  db_migrator.py  ingestion.py  query.py
frontend/: Dockerfile  index.html  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/chat/: ChatWindow.tsx  MessageBubble.tsx
frontend/src/components/dashboard/: CollectionCard.tsx
frontend/src/components/documents/: DocumentList.tsx  UploadZone.tsx
frontend/src/components/keys/: ApiKeyCard.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: ApiKeys.tsx  Chat.tsx  CollectionDetail.tsx  Dashboard.tsx  DbImport.tsx
frontend/src/store/: appStore.ts
(+18 files in other folders)
